# showoff

./: .env.tpl  BUSINESS_LOGIC.md  README.md  manage.py  mypy.ini  pyproject.toml  requirements.txt  urls.py  wsgi.py
glinteco_showoff/: __init__.py  celery_tasks.py
glinteco_showoff/settings/: local.py  prod.py
glinteco_showoff/settings/base/: __init__.py  base.py  drf.py  internationalization.py  static.py  storage.py
learning/: apps.py  signals.py  urls.py
learning/admin/: __init__.py  classroom.py  score.py  student.py  subject.py  teacher.py
learning/management/commands/: create_sample_data.py
learning/migrations/: 0001_initial.py
learning/models/: __init__.py  classroom.py  score.py  student.py  subject.py  teacher.py
learning/serializers/: __init__.py  base.py  classroom.py  score.py  student.py  subject.py  teacher.py
learning/views/: __init__.py  classroom.py  score.py  student.py  subject.py  teacher.py
student_management/: __init__.py  celery_tasks.py
student_management/settings/: local.py  prod.py  test.py
student_management/settings/base/: apps.py  base.py  celery.py  logging.py  sentry.py  static.py  storage.py
students/: admin.py  apps.py  models.py  serializers.py  views.py
students/management/commands/: create_sample_data.py
tests/: settings.py
tests/models/: test_classroom.py  test_score.py  test_student.py  test_subject.py  test_teacher.py
tests/serializers/: test_classroom.py  test_score.py  test_student.py  test_subject.py  test_teacher.py
tests/views/: test_classroom.py  test_score.py  test_student.py  test_subject.py  test_teacher.py
